# license-plate-recognition

./: CMakeLists.txt  README.md  capstone_v3.py
src/: main.cpp
